fixing Authorization and authentication
